@@ -1,4 +1,9 @@
-﻿zg 21.03.2015 00:39:48 +0200 - build 496
+﻿zg 21.03.2015 14:29:00 +0200 - build 497
+
+1. LuaFAR-плагины без ExitFARW, использующие luaplug.c могли падать при выгрузке, если оставались 
+   не удалённые lua-переменные, в __gc методе которых вызывались функции farapi.
+
+zg 21.03.2015 00:39:48 +0200 - build 496
 
 1. Far 3.0 API 4321
 
